# fastapi-demo

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh  set_env.sh
alembic/: env.py
alembic/versions/: 651fcdbdb662_init_users_groups.py
app/: config.py  main.py
app/db/: deps.py  engine.py  models.py
app/dependencies/: auth.py
app/models/: auth.py  groups.py  hello.py
app/routers/: groups.py  health.py  hello.py  local_auth.py  oidc.py
app/services/: auth.py  groups.py  hello.py  user_auth.py
openspec/: config.yaml
openspec/changes/add-container-support/: design.md  proposal.md  tasks.md
openspec/changes/add-container-support/specs/container-deploy/: spec.md
openspec/changes/add-oidc-auth/: tasks.md
openspec/changes/add-oidc-auth/specs/oidc-auth/: spec.md
openspec/changes/archive/2026-03-16-add-oidc-auth/: design.md  proposal.md
openspec/changes/archive/2026-03-16-add-password-auth-and-rbac/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-16-add-password-auth-and-rbac/specs/local-user-auth/: spec.md
openspec/changes/archive/2026-03-16-add-readme-and-makefile/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-16-fastapi-production-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/unify-auth-callback-url/: design.md  proposal.md  tasks.md
openspec/changes/unify-auth-callback-url/specs/config-fix/: spec.md
openspec/specs/app-scaffold/: spec.md
openspec/specs/local-user-auth/: spec.md
openspec/specs/oidc-auth/: spec.md
openspec/specs/project-docs/: spec.md
openspec/specs/project-setup/: spec.md
openspec/specs/router-service-pattern/: spec.md
openspec/specs/user-groups-rbac/: spec.md
tests/: conftest.py  test_auth_service.py  test_endpoints.py  test_groups.py  test_jwt_auth.py  test_local_auth.py
(+2 files in other folders)
