[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Production-ready FastAPI application scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.4.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
